[package]
name = "intan_import_py"
version = "0.1.0"
edition = "2021"

[lib]
name = "intan_import_py"
crate-type = ["cdylib"]

[dependencies]
byteorder = "1.5.0"
indexmap = "2.2.6"
ndarray = "0.15.6"
pyo3 = { version = "0.21.1", features = ["extension-module"] }
numpy = "0.21"

[build-dependencies]
maturin = "1.5.1"